# GDExtension

./: CMakeLists.txt  README.md  SConstruct  diff_detector.gdextension  example_usage.gd
.github/workflows/: build.yml
include/: diff_detector.h  diff_generator.h  register_types.h  yolo_detector.h
scripts/: setup_dependencies.py
src/: SConscript  diff_detector.cpp  diff_generator.cpp  register_types.cpp  yolo_detector.cpp
